--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 				<span id="nay-breakdown"></span><br>
 				<span id="not-voting-label"></span>
 			</div>
-			<div id="rollcalls">
-				<table></table>
-			</div>
+			<table id="rollcalls">
+			</table>
 		</div>
 	</body>
 </html>
