--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<script type="module" src="graph.js"></script>
 		<div id="content">
+			<select id="select-congress"></select>
 			<select id="select-chamber">
 				<option value="House">House of Representatives</option>
 				<option value="Senate">Senate</option>
