--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 				<span id="nay-breakdown"></span><br>
 				<span id="not-voting-label"></span>
 			</div>
-			<table id="rollcalls">
-			</table>
+		</div>
+		<div>
+		<table id="rollcalls">
+		</table>
 		</div>
 	</body>
 </html>
