--- a/index.html
+++ b/index.html
@@ -4,28 +4,36 @@
 		<meta charset="utf-8">
 		<title>Votes in Congress</title>
 		<link rel="stylesheet" href="styles.css"/>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@500&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<script type="module" src="graph.js"></script>
-		<div id="content">
-			<select id="select-congress"></select>
-			<select id="select-chamber">
-				<option value="House">House of Representatives</option>
-				<option value="Senate">Senate</option>
-			</select>
-			<svg id="chamber"></svg>
-			<div id="member-popup"></div>
-			<div id="vote-summary">
-				<span id="vote-result"></span><br>
-				<span id="yea-count" class="vote-count"></span>
-				<span id="yea-breakdown"></span>
-				<span id="nay-count" class="vote-count"></span>
-				<span id="nay-breakdown"></span><br>
-				<span id="not-voting-label"></span>
+		<header>
+			<h1 id="page-title">Votes in Congress</h1>
+		</header>
+		<div id="main">
+			<div id="chamber-box">
+				<select id="select-congress"></select>
+				<select id="select-chamber">
+					<option value="House">House of Representatives</option>
+					<option value="Senate">Senate</option>
+				</select>
+				<svg id="chamber"></svg>
+				<div id="member-popup"></div>
+				<div id="vote-summary">
+					<span id="vote-result"></span><br>
+					<span id="yea-count" class="vote-count"></span>
+					<span id="yea-breakdown"></span>
+					<span id="nay-count" class="vote-count"></span>
+					<span id="nay-breakdown"></span><br>
+					<span id="not-voting-label"></span>
+				</div>
 			</div>
+			<table id="rollcalls">
 		</div>
 		<div>
-		<table id="rollcalls">
 		</table>
 		</div>
 	</body>
