--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 		                <path d="m21 21-4.35-4.35"></path>
 		            </svg>
 		          </button>
-				</div>
+		        </div>
 				<svg id="chamber"></svg>
+		        <div id="search-members-results"></div>
 				<div id="member-popup"></div>
 				<div id="vote-summary">
 					<span id="vote-result"></span><br>
@@ -49,16 +50,16 @@
 			</div>
 			<div id="rollcalls-box">
 				<table id="rollcalls"></table>
-				<div id="search-votes" class="search">
+				<div id="search-rollcalls" class="search">
 				  <input
-				    id="search-votes-input"
+				    id="search-rollcalls-input"
 				    class="search-input"
 				    name="q"
 				    type="search"
 				    placeholder="Search votes..."
 				    autocomplete="off"
 				  />
-			      <button id="search-votes-button" class="search-button">
+			      <button id="search-rollcalls-button" class="search-button">
 		            <svg viewBox="0 0 24 24">
 		                <circle cx="11" cy="11" r="8"></circle>
 		                <path d="m21 21-4.35-4.35"></path>
