Fix label sizing

--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
 		          </button>
 		        </div>
 				<svg id="chamber"></svg>
+				<div id="legend"></div>
 		        <div id="search-members-results"></div>
 				<div id="member-popup"></div>
 				<div id="vote-summary">
 					<span id="vote-result"></span><br>
 					<span id="yea-count" class="vote-count"></span>
-					<span id="yea-breakdown"></span>
+					<span id="yea-breakdown" class="vote-breakdown"></span>
 					<span id="nay-count" class="vote-count"></span>
-					<span id="nay-breakdown"></span><br>
+					<span id="nay-breakdown" class="vote-breakdown"></span><br>
 					<span id="not-voting-label"></span>
 				</div>
 			</div>
